--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+header img {
+    display: block;
+    margin: 0 auto;
+    width: 300px;
+    height: 300px;
+}
 
 :root {
     --cor-principal: #6E859F;
